[package]
name = "dots"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
authors = ["Zakhary Kaplan <me@zakhary.dev"]
repository = "https://github.com/kaplanz/dotfiles"
license = "MIT"

[dependencies]
